2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads\ErrorListPad.cs:
	* MonoDevelop.Ide.Gui.Pads\MonodocTreePad.cs:
	* MonoDevelop.Ide.Gui.Components\TreeNodeNavigator.cs:
	* MonoDevelop.Ide.Gui.OptionPanels\MonoRuntimePanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs\SelectEncodingsDialog.cs:
	* MonoDevelop.Ide.Gui.Components\ExtensibleTreeView.cs:
	* MonoDevelop.Ide.Gui.Components\TransactedTreeBuilder.cs:
	  Don't use Gtk.TreeIter.Equals, since it's broken. Compare
	  TreePaths instead.

	* MonoDevelop.Ide.Tasks\TaskService.cs:
	  CommentTaskChangedEventArgs now provides the project of the
	  file. Use it instead of looking for it in the ide.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Yet another FilePath comparison fix.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Tasks/TaskService.cs:
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs:
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs:
	* MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Workaround for what seems to be a mcs bug. Looks like it
	  can't properly resolve the implicit conversion of null to
	  string.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Tasks\Task.cs:
	* MonoDevelop.Ide.Gui\Document.cs:
	* MonoDevelop.Ide.Gui\Workbench.cs:
	* MonoDevelop.Ide.Tasks\TaskService.cs:
	* MonoDevelop.Ide.Gui\RootWorkspace.cs:
	* MonoDevelop.Ide.Gui\ProjectOperations.cs:
	* MonoDevelop.Ide.Gui\DocumentNavigationPoint.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad\SystemFile.cs:
	* MonoDevelop.Ide.Gui.Content\TextEditorExtension.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad\ProjectFolder.cs:
	* MonoDevelop.Ide.Templates\SingleFileDescriptionTemplate.cs:
	  Use the new FilePath class for handling file and directory
	  paths.

2009-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs: